Update tasks. Added game over logic. Fixed SVG overflow.

--- a/styling.css
+++ b/styling.css
@@ -1,31 +1,49 @@
 #title {
-	margin-left: 25%;
-	width: 50%;
+	margin-left: 25vw;
+	width: 50vw;
 	text-align: center;
 	font-size: 24pt;
 	background-color:  pink;
 }
 
 #belly {
-	width: 45em;
+	width: 41.5vw;
+	padding-left: 4.5vw;
+	bottom: 10vh;
 	height: auto;
 	background-color: maroon;
-	font-size: 15pt;
 	color: pink;
 	position: absolute;
-	left: 25.5em;
+	left: 27.5vw;
 }
 
 .tile {
 	background-color:  lightgray;
+	text-align: center;
+	line-height: 1vw;
+	font-size: 1vw;
 	width:  1vw;
 	height:  1vw;
 }
 
 .tileBody {
 	color: green;
+	height: 1.15vw;
+	width: 1.15vw;
 }
 
+#tileHead {
+	background-image: url(resources/snekHead.svg);
+	height: 1.15vw;
+	width: 1.15vw;
+	ovwerflow: visible;
+}
+
+#tileTail {
+	background-image: url(resources/snekTail.svg);
+	height: 1.15vw;
+	width: 1.15vw;
+}
 .o0, .o1, .o2, .o3 {
 	background-image: url(resources/snekStraight.svg);
 }
@@ -50,35 +68,25 @@
 	transform: rotate(180deg);
 }
 
-#tileHead {
-	background-image: url(resources/snekHead.svg);
-}
-
-#tileTail {
-	background-image: url(resources/snekTail.svg);
-}
 
 .tileBelly {
 	display: block;
 	float: left;
-	width: 2em;
-	height: 2em;
-	line-height: 2em;
+	width: 2.6vw;
+	height: 2.6vw;
+	line-height: 3vw;
+	margin: .2vw;
 	background-color: gray;
 	color: white;
-	margin: 10px;
 	text-align: center;
 
 }
 
 #gameContainer {
 	display:  grid;
-	grid-gap:  5px;
+	grid-gap:  .3vw;
 	grid-template-columns: repeat(25, 1vw);
-	text-align:  center;
-	padding: auto;
+	left: 33.9vw;
 
 	position: absolute;
-    top: 10em;
-    left: 38%;
 }
